--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,11 +11,11 @@
 @import "./components/modal-btn";
 @import "./components/logo";
 @import "./components/menu";
-@import "./components/header";
 @import "./components/backdrop";
 @import "./components/modal-window";
 @import "./components/modal-form";
 
+@import "./layout/header";
 @import "./layout/hero";
 @import "./layout/advantages";
 @import "./layout/about";
