--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
   --card-gap: 30px;
   --hero-bcg-color: #c4c4c4;
   --social-icon-color-team: #afb1b8;
+  --page-header-border: #ececec;
   --transition-dur-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -92,6 +93,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
@@ -109,7 +111,6 @@ body {
     width: 1200px;
   }
 }
-
 @media screen and (max-width: 767px) {
   .mobile-menu {
     position: fixed;
@@ -221,129 +222,6 @@ body {
     line-height: 1.1666666667;
     letter-spacing: 0.03em;
   }
-}
-
-.page-navigation__logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 93px;
-}
-
-.page-navigation {
-  display: flex;
-  align-items: center;
-}
-
-.menu {
-  display: flex;
-  column-gap: 50px;
-}
-
-@media screen and (max-width: 767px) {
-  .menu {
-    display: none;
-  }
-  .open-mobile-menu-btn {
-    line-height: 0;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    width: 40px;
-    height: 40px;
-  }
-  .open-mobile-menu-btn__icon {
-    width: 24px;
-    height: 16px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .open-mobile-menu-btn {
-    display: none;
-  }
-}
-.menu .link.current {
-  color: var(--accent-color);
-}
-
-.menu__link {
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: color var(--transition-dur-and-func);
-  position: relative;
-}
-
-.menu__link:hover,
-.menu__link:focus {
-  color: var(--accent-color);
-}
-
-.page-header {
-  border-bottom: 1px solid #ececec;
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-
-.page-header__container {
-  display: flex;
-  align-items: center;
-}
-@media screen and (max-width: 767px) {
-  .page-header__container {
-    justify-content: space-between;
-  }
-}
-
-.contact-mail,
-.contact-tel {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.1428571429;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  fill: currentColor;
-  transition: color var(--transition-dur-and-func);
-}
-.contact-mail:hover, .contact-mail:focus,
-.contact-tel:hover,
-.contact-tel:focus {
-  color: var(--accent-color);
-}
-
-.contact {
-  display: flex;
-  margin-left: auto;
-  column-gap: 30px;
-}
-@media screen and (max-width: 767px) {
-  .contact {
-    display: none;
-  }
-}
-
-.contact-mail__icon {
-  margin-right: 10px;
-  fill: var(--secondary-text-color);
-  transition: fill var(--transition-dur-and-func);
-}
-.contact-mail:hover .contact-mail__icon, .contact-mail:focus .contact-mail__icon {
-  fill: var(--accent-color);
-}
-
-.contact-tel__icon {
-  margin-right: 10px;
-  fill: var(--secondary-text-color);
-  transition: fill var(--transition-dur-and-func);
-}
-.contact-tel:hover .contact-tel__icon, .contact-tel:focus .contact-tel__icon {
-  fill: var(--accent-color);
 }
 
 .backdrop {
@@ -531,6 +409,43 @@ body {
 
 .modal-form__policy-link {
   color: var(--accent-color);
+}
+
+.menu {
+  display: none;
+}
+
+.contact {
+  display: none;
+}
+
+.open-mobile-menu-btn {
+  line-height: 0;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  fill: var(--logo-color);
+  transition: var(--transition-dur-and-func);
+}
+.open-mobile-menu-btn:hover, .open-mobile-menu-btn:focus {
+  fill: var(--accent-color);
+}
+
+.open-mobile-menu-btn__icon {
+  width: 40px;
+  height: 40px;
+}
+
+.page-header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.page-header {
+  border-bottom: 1px solid var(--page-header-border);
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .hero-section {
