--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,61 +1,61 @@
-.page-navigation {
-  display: flex;
-  align-items: center;
-}
+// .page-navigation {
+//   display: flex;
+//   align-items: center;
+// }
 
-.menu {
-  display: flex;
-  column-gap: 50px;
-}
+// .menu {
+//   display: flex;
+//   column-gap: 50px;
+// }
 
-// 0px - 767px
+// // 0px - 767px
 
-@media screen and (max-width: 767px) {
-  .menu {
-    display: none;
-  }
+// @media screen and (max-width: 767px) {
+//   .menu {
+//     display: none;
+//   }
 
-  .open-mobile-menu-btn {
-    line-height: 0;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    width: 40px;
-    height: 40px;
-  }
+//   .open-mobile-menu-btn {
+//     line-height: 0;
+//     border: none;
+//     background-color: transparent;
+//     padding: 0;
+//     width: 40px;
+//     height: 40px;
+//   }
 
-  .open-mobile-menu-btn__icon {
-    width: 24px;
-    height: 16px;
-  }
-}
+//   .open-mobile-menu-btn__icon {
+//     width: 24px;
+//     height: 16px;
+//   }
+// }
 
-// від 768px
+// // від 768px
 
-@media screen and (min-width: 768px) {
-  .open-mobile-menu-btn {
-    display: none;
-  }
-}
+// @media screen and (min-width: 768px) {
+//   .open-mobile-menu-btn {
+//     display: none;
+//   }
+// }
 
-.menu .link.current {
-  color: var(--accent-color);
-}
+// .menu .link.current {
+//   color: var(--accent-color);
+// }
 
-.menu__link {
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: color var(--transition-dur-and-func);
-  position: relative;
-}
-.menu__link:hover,
-.menu__link:focus {
-  color: var(--accent-color);
-}
+// .menu__link {
+//   font-weight: 500;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   color: var(--primary-text-color);
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+//   transition: color var(--transition-dur-and-func);
+//   position: relative;
+// }
+// .menu__link:hover,
+// .menu__link:focus {
+//   color: var(--accent-color);
+// }
 
 // .current::after {
 //   content: "";
