--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -14,5 +14,6 @@
   --card-gap: 30px;
   --hero-bcg-color: #c4c4c4;
   --social-icon-color-team: #afb1b8;
+  --page-header-border: #ececec;
   --transition-dur-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
