--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -21,17 +21,21 @@ address {
 .link {
   text-decoration: none;
 }
+
 .list {
   list-style: none;
 }
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
+
 button {
   cursor: pointer;
 }
+
 body {
   font-family: var(--primary-font);
   font-size: 14px;
@@ -40,4 +44,8 @@ body {
 
   color: var(--primary-text-color);
   background-color: var(--main-color);
+}
+
+body.modal-open {
+  overflow: hidden;
 }
