--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 100;
   transition: opacity 500ms ease, visibility 500ms ease;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
