--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,56 +1,120 @@
-@media screen and (max-width: 767px) {
-  .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    background-color: var(--main-color);
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transition: opacity var(--transition-dur-and-func);
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-color);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity var(--transition-dur-and-func),
+    visibility var(--transition-dur-and-func);
+}
+.mobile-menu__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  line-height: 0;
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu__close-icon {
+  .mobile-menu__close-btn:hover &,
+  .mobile-menu__close-btn:focus & {
+    fill: var(--accent-color);
   }
-  .mobile-menu__close-btn {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    border: 0;
-    padding: 0;
-    line-height: 0;
-  }
+}
+.mobile-menu__close-icon {
+  width: 24px;
+  height: 24px;
+}
 
-  .mobile-menu__close-icon {
-    width: 40px;
-    height: 40px;
-  }
+.mobile-menu__container {
+  position: relative;
+  padding-left: 40px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
 
-  .mobile-menu__container {
-    position: relative;
-    padding-left: 40px;
-    padding-top: 48px;
-  }
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
 
-  .mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
+.mobile-menu-set__link {
+  @include font($fs: 40px, $fw: 500, $lh: 47px, $ls: 0.02em);
+  color: var(--primary-text-color);
+  position: relative;
+  transition: color var(--transition-dur-and-func);
 
-  .mobile-menu-set__link {
-    @include font($fs: 40px, $fw: 500, $lh: 47px, $ls: 0.02em);
-    color: var(--primary-text-color);
-
-    transition: color var(--transition-dur-and-func);
-
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
-    }
-  }
-
-  .mobile-menu-set .link.current {
+  &:hover,
+  &:focus {
     color: var(--accent-color);
   }
+}
+
+.mobile-menu-set .link.current {
+  color: var(--accent-color);
+}
+
+.current::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+}
+
+.mobile-menu-set__item {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+.mobile-contacts-tel {
+  @include font($fs: 34px, $fw: 500, $lh: 40px, $ls: 0.02em);
+  color: var(--accent-color);
+}
+
+.mobile-contacts__item {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+.mobile-menu-contacts-section {
+  margin-top: 302px;
+}
+
+.mobile-contacts-email {
+  @include font($fs: 24px, $fw: 500, $lh: 28px, $ls: 0.02em);
+  color: var(--secondary-text-color);
+}
+
+.mobile-social-list {
+  display: flex;
+  column-gap: 20px;
+}
+
+.mobile-social-list__link {
+  @include font($fs: 18px, $fw: 500, $lh: 22px, $ls: 0.02em);
+  color: var(--accent-color);
+}
+
+.mobile-social-list__item {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+}
+.mobile-social-list-section {
+  margin-top: 64px;
 }
