--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -1,13 +1,10 @@
 .modal-open-btn {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+  @include font($fs: 16px, $fw: 700, $lh: 30px, $ls: 0.06em);
   color: var(--main-color);
   background: var(--accent-color);
   border: none;
   border-radius: 4px;
-  padding: 10px 32px;
+  padding: 10px 24px;
   transition: background-color var(--transition-dur-and-func),
     box-shadow var(--transition-dur-and-func);
 
@@ -15,5 +12,13 @@
   &:focus {
     background-color: var(--background-active-btn);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
+
+  @media screen and (min-width: 768px) {
+    @include font($fs: 26px, $fw: 900, $lh: 42px, $ls: 0.06em);
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 10px 32px;
   }
 }
