--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,10 +1,12 @@
 .modal-form-title {
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
+  @include font($fs: 20px, $fw: 700, $lh: 30px);
+
   text-align: center;
   margin-bottom: 12px;
+
+  @media screen and (min-width: 1200px) {
+    @include font($fs: 20px, $fw: 700, $lh: 23px);
+  }
 }
 
 .modal-form {
@@ -18,9 +20,7 @@
 
 .modal-form__text {
   display: block;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+  @include font($fs: 12px, $lh: 14px, $ls: 0.01em);
   color: var(--secondary-text-color);
   margin-bottom: 4px;
 }
@@ -123,10 +123,7 @@
   width: 200px;
   height: 50px;
   align-self: center;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+  @include font($fs: 16px, $fw: 700, $lh: 30px, $ls: 0.06em);
   color: var(--main-color);
   background: var(--accent-color);
   border: none;
@@ -142,8 +139,9 @@
   }
 }
 
-.modal-form__policy {
-  line-height: 1.71;
+.modal-form__policy,
+.modal-form__policy-link {
+  @include font($fs: 12px, $lh: 14px, $ls: 0.03em);
   color: var(--secondary-text-color);
 }
 .modal-form__policy-link {
