--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -3,12 +3,17 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  max-width: 450px;
+  min-height: 609px;
   background-color: var(--main-color);
   padding: 40px;
-}
 
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    min-height: 581px;
+    width: 100%;
+  }
+}
 .close-modal-btn {
   position: absolute;
   top: 8px;
