--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,31 +1,40 @@
 .about-section {
-  padding-top: 94px;
+  display: none;
 }
 
-.box {
-  display: flex;
-  gap: 30px;
-}
+@media screen and (min-width: 1200px) {
+  .about-section {
+    padding-top: 94px;
+    display: block;
+  }
 
-.box__item {
-  flex-basis: calc((100% - 60px) / 3);
-  position: relative;
-  overflow: hidden;
-  z-index: 100;
-}
+  .box {
+    display: flex;
+    gap: 30px;
+  }
 
-.box__overlay {
-  @extend %align;
-  position: absolute;
-  font-family: var(--primary-font);
-  font-weight: 700;
-  line-height: 1.14;
-  color: var(--main-color);
-  text-transform: uppercase;
-  background-color: rgba(47, 48, 58, 0.8);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  width: 370px;
-  height: 70px;
-  bottom: 0;
-  right: 0;
+  .box__item {
+    flex-basis: calc((100% - 60px) / 3);
+    position: relative;
+    overflow: hidden;
+    z-index: 100;
+  }
+
+  .box__overlay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    font-family: var(--primary-font);
+    font-weight: 700;
+    line-height: 1.14;
+    color: var(--main-color);
+    text-transform: uppercase;
+    background-color: rgba(47, 48, 58, 0.8);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    width: 370px;
+    height: 70px;
+    bottom: 0;
+    right: 0;
+  }
 }
