--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,8 +2,30 @@
   display: none;
 }
 
+@media screen and (min-width: 768px) {
+  .page-navigation {
+    display: flex;
+    align-items: center;
+  }
+
+  .menu {
+    display: flex;
+    column-gap: 50px;
+  }
+}
+
 .contact {
   display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-left: auto;
+    column-gap: 30px;
+  }
 }
 
 .open-mobile-menu-btn {
@@ -11,6 +33,8 @@
   border: none;
   background-color: transparent;
   padding: 0;
+  width: 40px;
+  height: 40px;
   fill: var(--logo-color);
   transition: var(--transition-dur-and-func);
 
@@ -18,11 +42,15 @@
   &:focus {
     fill: var(--accent-color);
   }
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .open-mobile-menu-btn__icon {
-  width: 40px;
-  height: 40px;
+  width: 24px;
+  height: 16px;
 }
 
 .page-header__container {
@@ -32,113 +60,91 @@
 }
 
 .page-header {
-  border-bottom: 1px solid var(--page-header-border);
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-// .contact-mail,
-// .contact-tel {
-//   display: flex;
-//   align-items: center;
-//   @include font($fw: 500, $ls: 0.02em);
-//   // font-weight: 500;
-//   // line-height: 1.14;
-//   // letter-spacing: 0.02em;
-//   color: var(--secondary-text-color);
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   fill: currentColor;
-//   transition: color var(--transition-dur-and-func);
+.contact-mail,
+.contact-tel {
+  color: var(--secondary-text-color);
 
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 
-// .contact {
-//   display: flex;
-//   margin-left: auto;
-//   column-gap: 30px;
+  @media screen and (min-width: 768px) {
+    @include font($fs: 12px, $fw: 500, $lh: 14px, $ls: 0.02em);
+  }
 
-//   @media screen and (max-width: 767px) {
-//     display: none;
-//   }
-// }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+    @include font($fw: 500, $ls: 0.02em);
 
-// .contact-mail__icon {
-//   margin-right: 10px;
-//   fill: var(--secondary-text-color);
-//   transition: fill var(--transition-dur-and-func);
+    padding-top: 32px;
+    padding-bottom: 32px;
+    fill: currentColor;
+    transition: color var(--transition-dur-and-func);
+  }
+}
 
-//   .contact-mail:hover &,
-//   .contact-mail:focus & {
-//     fill: var(--accent-color);
-//   }
-// }
+.contact-mail__icon {
+  margin-right: 10px;
+  fill: var(--secondary-text-color);
+  transition: fill var(--transition-dur-and-func);
 
-// .contact-tel__icon {
-//   margin-right: 10px;
-//   fill: var(--secondary-text-color);
-//   transition: fill var(--transition-dur-and-func);
+  .contact-mail:hover &,
+  .contact-mail:focus & {
+    fill: var(--accent-color);
+  }
+}
 
-//   .contact-tel:hover &,
-//   .contact-tel:focus & {
-//     fill: var(--accent-color);
-//   }
-// }
-// .page-navigation {
-//   display: flex;
-//   align-items: center;
-// }
+.contact-tel__icon {
+  margin-right: 10px;
+  fill: var(--secondary-text-color);
+  transition: fill var(--transition-dur-and-func);
 
-// .menu {
-//   display: flex;
-//   column-gap: 50px;
-// }
+  .contact-tel:hover &,
+  .contact-tel:focus & {
+    fill: var(--accent-color);
+  }
+}
 
-// // 0px - 767px
+.menu .link.current {
+  color: var(--accent-color);
+}
 
-// @media screen and (max-width: 767px) {
-//   .menu {
-//     display: none;
-//   }
+.menu__link {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition: color var(--transition-dur-and-func);
+  position: relative;
+}
+.menu__link:hover,
+.menu__link:focus {
+  color: var(--accent-color);
+}
 
-// // від 768px
+.current::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+}
 
-// @media screen and (min-width: 768px) {
-//   .open-mobile-menu-btn {
-//     display: none;
-//   }
-// }
-
-// .menu .link.current {
-//   color: var(--accent-color);
-// }
-
-// .menu__link {
-//   font-weight: 500;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--primary-text-color);
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   transition: color var(--transition-dur-and-func);
-//   position: relative;
-// }
-// .menu__link:hover,
-// .menu__link:focus {
-//   color: var(--accent-color);
-// }
-
-// .current::after {
-//   content: "";
-//   position: absolute;
-//   bottom: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 4px;
-//   border-radius: 2px;
-//   background-color: var(--accent-color);
-// }
+@media screen and (min-width: 768px) {
+  .contact__item {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+}
