--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,6 +3,13 @@
   padding-top: 118px;
   text-align: center;
   background-color: var(--secondary-background-color);
+
+  @media screen and (min-width: 1200px) {
+    .hero-section {
+      padding-bottom: 200px;
+      padding-top: 200px;
+    }
+  }
 }
 
 .hero-overlay {
@@ -18,6 +25,75 @@
     url("../images/heromobile.jpg");
   background-size: cover;
   background-position: center;
+
+  /* 
+screen
+2x +
+0px - 767px
+*/
+  @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+    screen and (min-resolution: 192dpi) and (max-width: 767px),
+    screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/heromobile@2x.jpg");
+  }
+
+  /* 
+768px +
+*/
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    min-height: 400px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/herotablet.jpg");
+  }
+  /* 
+screen
+2x +
+768px +
+*/
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+    screen and (min-resolution: 192dpi) and (min-width: 768px),
+    screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/herotablet@2x.jpg");
+  }
+
+  /* 
+1200px +
+*/
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    min-height: 600px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/herodesktop.jpg");
+  }
+  /* 
+2x +
+1200px +
+screen
+*/
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+    screen and (min-resolution: 192dpi) and (min-width: 1200px),
+    screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/herodesktop@2x.jpg");
+  }
 }
 
 .hero-section__title {
@@ -29,94 +105,9 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
-}
 
-/* 
-screen
-2x +
-0px - 767px
-*/
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-  screen and (min-resolution: 192dpi) and (max-width: 767px),
-  screen and (min-resolution: 2dppx) and (max-width: 767px) {
-  .hero-overlay {
-    background-image: url("../images/heromobile@2x.jpg");
+  @media screen and (min-width: 1200px) {
+    @include font($fs: 44px, $fw: 900, $lh: 60px, $ls: 0.06em);
+    width: 696px;
   }
 }
-
-/* 
-768px +
-*/
-@media screen and (min-width: 768px) {
-  .hero-overlay {
-    background-image: url("../images/herotablet.jpg");
-  }
-}
-/* 
-screen
-2x +
-768px +
-*/
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-  screen and (min-resolution: 192dpi) and (min-width: 768px),
-  screen and (min-resolution: 2dppx) and (min-width: 768px) {
-  .hero-overlay {
-    background-image: url("../images/herotablet@2x.jpg");
-  }
-}
-
-/* 
-1200px +
-*/
-@media screen and (min-width: 1200px) {
-  .hero-overlay {
-    background-image: url("../images/herodesktop.jpg");
-  }
-}
-/* 
-2x +
-1200px +
-screen
-*/
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
-  screen and (min-resolution: 192dpi) and (min-width: 1200px),
-  screen and (min-resolution: 2dppx) and (min-width: 1200px) {
-  .hero-overlay {
-    background-image: url("../images/herodesktop@2x.jpg");
-  }
-}
-
-// .hero-section {
-//   padding-bottom: 200px;
-//   padding-top: 200px;
-//   text-align: center;
-//   background-color: var(--secondary-background-color);
-// }
-
-// .hero-overlay {
-//   max-width: 1600px;
-//   min-height: 600px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   background-color: var(--hero-bcg-color);
-//   background-image: linear-gradient(
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url(../images/heroimg.jpg);
-//   background-size: cover;
-//   background-position: center;
-// }
-// .hero-section__title {
-//   font-weight: 900;
-//   font-size: 44px;
-//   line-height: 1.36;
-//   text-align: center;
-//   letter-spacing: 0.06em;
-//   text-transform: uppercase;
-//   color: var(--main-color);
-//   width: 696px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   margin-bottom: 30px;
-// }
