--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -1,38 +1,17 @@
-.team-list {
-  display: flex;
-  gap: 30px;
-}
-
 .team-section {
   background-color: var(--team-section-bgc);
 }
 
-.section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  margin-bottom: 50px;
-  text-align: center;
+.team-member-img {
+  width: 100%;
 }
-
-.team-member__name {
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.03em;
-  margin-bottom: 10px;
-  text-align: center;
-}
-.team-member__position {
-  font-size: 16px;
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-  text-align: center;
-  margin-bottom: 16px;
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .team-list__item {
-  flex-basis: calc((100% - 90px / 4));
   border: 1px solid var(--boder-color);
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -40,6 +19,26 @@
   border-radius: 0px 0px 4px 4px;
 
   background-color: var(--main-color);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px / 2));
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 90px / 4));
+  }
+}
+.team-member__name {
+  @include font($fs: 16px, $fw: 500, $lh: 19px);
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.team-member__position {
+  @include font($fs: 16px, $lh: 19px);
+  color: var(--secondary-text-color);
+  text-align: center;
+  margin-bottom: 16px;
 }
 
 .team-member__meta {
