--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./components/backdrop";
 @import "./components/modal-window";
 @import "./components/modal-form";
+@import "./components/section-title";
 
 @import "./layout/header";
 @import "./layout/hero";
