--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ body.modal-open {
 .container {
   padding-left: 15px;
   padding-right: 15px;
+  width: 100%;
 }
 @media screen and (min-width: 480px) {
   .container {
@@ -319,6 +320,14 @@ body.modal-open {
     padding-bottom: 25px;
     margin-right: 92px;
   }
+}
+
+.logo {
+  display: block;
+}
+
+.address-box {
+  text-align: center;
 }
 
 .backdrop {
@@ -783,7 +792,7 @@ body.modal-open {
   text-align: center;
   text-transform: uppercase;
   color: var(--main-color);
-  width: 360px;
+  max-width: 360px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -1055,7 +1064,9 @@ body.modal-open {
 
 .address-container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  gap: 60px;
+  align-items: center;
 }
 
 .footer-list__item:not(:last-child) {
@@ -1100,7 +1111,7 @@ body.modal-open {
 }
 
 .footer-social-links {
-  margin-left: 70px;
+  text-align: center;
 }
 
 .subscribe-form__title {
@@ -1111,15 +1122,19 @@ body.modal-open {
 }
 
 .subscribe-section {
-  display: block;
-  margin-left: 93px;
-  width: 570px;
-  height: 86px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
 }
 
 .subscribe-form__field {
   display: flex;
+  flex-direction: column;
   margin-top: 20px;
+  gap: 20px;
+  align-items: center;
+  width: 100%;
 }
 
 .subscribe-form__input {
@@ -1137,11 +1152,19 @@ body.modal-open {
   outline: none;
 }
 
+.subscribe-form {
+  width: 100%;
+}
+
+.subscribe-form__label {
+  width: 100%;
+}
+
 .subscribe-btn {
   display: flex;
   column-gap: 10px;
   justify-content: center;
-  min-width: 200px;
+  width: 200px;
   height: 50px;
   font-weight: 700;
   font-size: 16px;
@@ -1151,7 +1174,6 @@ body.modal-open {
   background: var(--accent-color);
   border: none;
   border-radius: 4px;
-  margin-left: 12px;
   padding: 10px 28px;
   transition: background-color var(--transition-dur-and-func), box-shadow var(--transition-dur-and-func);
 }
