--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -27,7 +27,9 @@
 
 .address-container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  gap: 60px;
+  align-items: center;
 }
 
 .footer-list__item {
@@ -79,7 +81,8 @@
 }
 
 .footer-social-links {
-  margin-left: 70px;
+  text-align: center;
+  // margin-left: 70px;
 }
 
 .subscribe-form__title {
@@ -90,15 +93,20 @@
 }
 
 .subscribe-section {
-  display: block;
-  margin-left: 93px;
-  width: 570px;
-  height: 86px;
+  display: flex;
+  flex-direction: column;
+  // margin-left: 93px;
+  width: 100%;
+  align-items: center;
 }
 
 .subscribe-form__field {
   display: flex;
+  flex-direction: column;
   margin-top: 20px;
+  gap: 20px;
+  align-items: center;
+  width: 100%;
 }
 
 .subscribe-form__input {
@@ -116,12 +124,19 @@
     outline: none;
   }
 }
+.subscribe-form {
+  width: 100%;
+}
+
+.subscribe-form__label {
+  width: 100%;
+}
 
 .subscribe-btn {
   display: flex;
   column-gap: 10px;
   justify-content: center;
-  min-width: 200px;
+  width: 200px;
   height: 50px;
   font-weight: 700;
   font-size: 16px;
@@ -131,7 +146,6 @@
   background: var(--accent-color);
   border: none;
   border-radius: 4px;
-  margin-left: 12px;
   padding: 10px 28px;
   transition: background-color var(--transition-dur-and-func),
     box-shadow var(--transition-dur-and-func);
