--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -101,7 +101,7 @@ screen
   text-align: center;
   text-transform: uppercase;
   color: var(--main-color);
-  width: 360px;
+  max-width: 360px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
