--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -11,6 +11,7 @@
   pointer-events: none;
   transition: opacity var(--transition-dur-and-func),
     visibility var(--transition-dur-and-func);
+  overflow: scroll;
 }
 .mobile-menu__close-btn {
   position: absolute;
@@ -36,6 +37,9 @@
 }
 
 .mobile-menu__container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   position: relative;
   padding-left: 40px;
   padding-top: 48px;
@@ -64,17 +68,6 @@
   color: var(--accent-color);
 }
 
-.current::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-}
-
 .mobile-menu-set__item {
   &:not(:last-child) {
     margin-bottom: 32px;
@@ -82,8 +75,11 @@
 }
 
 .mobile-contacts-tel {
-  @include font($fs: 34px, $fw: 500, $lh: 40px, $ls: 0.02em);
+  @include font($fs: 26px, $fw: 500, $lh: 40px, $ls: 0.02em);
   color: var(--accent-color);
+  @media screen and (min-width: 480px) {
+    font-size: 34px;
+  }
 }
 
 .mobile-contacts__item {
@@ -93,7 +89,7 @@
 }
 
 .mobile-menu-contacts-section {
-  margin-top: 302px;
+  margin-top: auto;
 }
 
 .mobile-contacts-email {
@@ -107,11 +103,15 @@
 }
 
 .mobile-social-list__link {
-  @include font($fs: 18px, $fw: 500, $lh: 22px, $ls: 0.02em);
+  @include font($fs: 8px, $fw: 500, $lh: 22px, $ls: 0.02em);
   color: var(--accent-color);
+
+  @media screen and (min-width: 480px) {
+    font-size: 18px;
+  }
 }
 
-.mobile-social-list__item {
+.mobile-social-list__item:not(:last-child) {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
   padding-right: 10px;
 }
