--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -130,7 +130,7 @@
   color: var(--accent-color);
 }
 
-.current::after {
+.page-navigation .current::after {
   content: "";
   position: absolute;
   bottom: 0;
