--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,7 @@ body.modal-open {
   visibility: hidden;
   pointer-events: none;
   transition: opacity var(--transition-dur-and-func), visibility var(--transition-dur-and-func);
+  overflow: scroll;
 }
 
 .mobile-menu__close-btn {
@@ -158,6 +159,9 @@ body.modal-open {
 }
 
 .mobile-menu__container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   position: relative;
   padding-left: 40px;
   padding-top: 48px;
@@ -187,27 +191,21 @@ body.modal-open {
   color: var(--accent-color);
 }
 
-.current::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-}
-
 .mobile-menu-set__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
 .mobile-contacts-tel {
-  font-size: 34px;
+  font-size: 26px;
   font-weight: 500;
-  line-height: 1.1764705882;
+  line-height: 1.5384615385;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+}
+@media screen and (min-width: 480px) {
+  .mobile-contacts-tel {
+    font-size: 34px;
+  }
 }
 
 .mobile-contacts__item:not(:last-child) {
@@ -215,7 +213,7 @@ body.modal-open {
 }
 
 .mobile-menu-contacts-section {
-  margin-top: 302px;
+  margin-top: auto;
 }
 
 .mobile-contacts-email {
@@ -232,14 +230,19 @@ body.modal-open {
 }
 
 .mobile-social-list__link {
-  font-size: 18px;
+  font-size: 8px;
   font-weight: 500;
-  line-height: 1.2222222222;
+  line-height: 2.75;
   letter-spacing: 0.02em;
   color: var(--accent-color);
 }
+@media screen and (min-width: 480px) {
+  .mobile-social-list__link {
+    font-size: 18px;
+  }
+}
 
-.mobile-social-list__item {
+.mobile-social-list__item:not(:last-child) {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
   padding-right: 10px;
 }
@@ -350,9 +353,9 @@ body.modal-open {
 
 .modal {
   position: absolute;
-  top: 50%;
+  top: 20px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   max-width: 450px;
   min-height: 609px;
   background-color: var(--main-color);
@@ -527,11 +530,17 @@ body.modal-open {
 
 .modal-form__policy,
 .modal-form__policy-link {
-  font-size: 12px;
+  font-size: 6px;
   font-weight: 400;
-  line-height: 1.1666666667;
+  line-height: 2.3333333333;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+@media screen and (min-width: 480px) {
+  .modal-form__policy,
+.modal-form__policy-link {
+    font-size: 12px;
+  }
 }
 
 .modal-form__policy-link {
@@ -694,7 +703,7 @@ body.modal-open {
   color: var(--accent-color);
 }
 
-.current::after {
+.page-navigation .current::after {
   content: "";
   position: absolute;
   bottom: 0;
