--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,8 +1,8 @@
 .modal {
   position: absolute;
-  top: 50%;
+  top: 20px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   max-width: 450px;
   min-height: 609px;
   background-color: var(--main-color);
