--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -4,7 +4,9 @@
   background: var(--accent-color);
   border: none;
   border-radius: 4px;
-  padding: 10px 24px;
+  padding: 10px;
+  width: 200px;
+  height: 50px;
   transition: background-color var(--transition-dur-and-func),
     box-shadow var(--transition-dur-and-func);
 
@@ -15,7 +17,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    @include font($fs: 26px, $fw: 900, $lh: 42px, $ls: 0.06em);
+    @include font($fs: 16px, $fw: 700, $lh: 30px, $ls: 0.06em);
   }
 
   @media screen and (min-width: 1200px) {
