--- a/sass/layout/_clients-section.scss
+++ b/sass/layout/_clients-section.scss
@@ -22,7 +22,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 60px / 3));
+    flex-basis: calc((100% - 60px) / 3);
     width: 226px;
     height: 92px;
   }
