--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -21,7 +21,7 @@
   background-color: var(--main-color);
 
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 30px / 2));
+    flex-basis: calc((100% - 30px) / 2);
   }
 
   @media screen and (min-width: 1200px) {
