--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -30,7 +30,7 @@
   @include font($lh: 24px);
   color: var(--secondary-text-color);
 
-  margin-bottom: 30px;
+  // margin-bottom: 30px;
 }
 
 .feature__card {
