--- a/css/main.css
+++ b/css/main.css
@@ -269,19 +269,6 @@ body.modal-open {
   background-color: var(--background-active-btn);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-@media screen and (min-width: 768px) {
-  .modal-open-btn {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.875;
-    letter-spacing: 0.06em;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .modal-open-btn {
-    padding: 10px 32px;
-  }
-}
 
 .logo__first-part-logo,
 .logo__second-part-logo,
@@ -721,7 +708,7 @@ body.modal-open {
   background-color: var(--accent-color);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contact__item:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -733,7 +720,7 @@ body.modal-open {
   background-color: var(--secondary-background-color);
 }
 @media screen and (min-width: 1200px) {
-  .hero-section .hero-section {
+  .hero-section {
     padding-bottom: 200px;
     padding-top: 200px;
   }
@@ -819,7 +806,7 @@ body.modal-open {
     font-weight: 900;
     line-height: 1.3636363636;
     letter-spacing: 0.06em;
-    width: 696px;
+    max-width: 696px;
   }
 }
 
@@ -862,7 +849,6 @@ body.modal-open {
   line-height: 1.7142857143;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
-  margin-bottom: 30px;
 }
 
 .feature__card {
@@ -940,7 +926,7 @@ body.modal-open {
 }
 @media screen and (min-width: 1200px) {
   .team-list__item {
-    flex-basis: calc(100% - 22.5px);
+    flex-basis: calc((100% - 90px) / 4);
   }
 }
 
@@ -1084,6 +1070,14 @@ body.modal-open {
   gap: 60px;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  .address-container {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
 
 .footer-list__item:not(:last-child) {
   margin-bottom: 9px;
@@ -1166,6 +1160,13 @@ body.modal-open {
 }
 .subscribe-form__input:focus {
   outline: none;
+}
+@media screen and (min-width: 768px) {
+  .subscribe-form__input {
+    width: 450px;
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 .subscribe-form {
