--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -142,7 +142,7 @@
   background-color: var(--accent-color);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contact__item {
     &:not(:last-child) {
       margin-bottom: 10px;
