--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,10 +5,8 @@
   background-color: var(--secondary-background-color);
 
   @media screen and (min-width: 1200px) {
-    .hero-section {
-      padding-bottom: 200px;
-      padding-top: 200px;
-    }
+    padding-bottom: 200px;
+    padding-top: 200px;
   }
 }
 
@@ -108,6 +106,6 @@ screen
 
   @media screen and (min-width: 1200px) {
     @include font($fs: 44px, $fw: 900, $lh: 60px, $ls: 0.06em);
-    width: 696px;
+    max-width: 696px;
   }
 }
