--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -25,7 +25,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% - 90px / 4));
+    flex-basis: calc((100% - 90px) / 4);
   }
 }
 .team-member__name {
