--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -37,8 +37,10 @@
     justify-content: space-around;
     align-items: baseline;
   }
+  @media screen and (min-width: 1200px) {
+    justify-content: space-between;
+  }
 }
-
 .footer-list__item {
   &:not(:last-child) {
     margin-bottom: 9px;
@@ -89,6 +91,10 @@
 
 .footer-social-links {
   text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
   // margin-left: 70px;
 }
 
@@ -105,8 +111,10 @@
   // margin-left: 93px;
   width: 100%;
   align-items: center;
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+  }
 }
-
 .subscribe-form__field {
   display: flex;
   flex-direction: column;
@@ -114,6 +122,11 @@
   gap: 20px;
   align-items: center;
   width: 100%;
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    gap: 10px;
+  }
 }
 
 .subscribe-form__input {
@@ -136,9 +149,18 @@
     display: block;
     margin: 0 auto;
   }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    display: block;
+    margin: 0;
+  }
 }
 .subscribe-form {
   width: 100%;
+
+  @media screen and (min-width: 1200px) {
+    width: auto;
+  }
 }
 
 .subscribe-form__label {
