--- a/sass/layout/_clients-section.scss
+++ b/sass/layout/_clients-section.scss
@@ -22,13 +22,13 @@
   }
 
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 60px) / 3);
+    // flex-basis: calc((100% - 60px) / 3);
     width: 226px;
     height: 92px;
   }
 
   @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% - 90px / 4));
+    // flex-basis: calc((100% - 90px) / 4);
     width: 170px;
     height: 92px;
   }
