--- a/css/main.css
+++ b/css/main.css
@@ -705,7 +705,7 @@ body.modal-open {
 .page-navigation .current::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
