--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -15,6 +15,7 @@
   @media screen and (min-width: 1200px) {
     top: 50%;
     transform: translate(-50%, -50%);
+    max-width: auto;
     width: 528px;
     min-height: 581px;
   }
