--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,7 +11,7 @@
 }
 
 .hero-overlay {
-  max-width: 480px;
+  // max-width: 480px;
   min-height: 400px;
   margin-left: auto;
   margin-right: auto;
